# Face-Controlled-Arkanoid

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Face-Controlled Arkanoid/: CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.h  Face-Controlled Arkanoid.cpp  Face-Controlled Arkanoid.h  Game.cpp  Game.h  GameObjectsParameters.h
Face-Controlled Arkanoid/UI/: Button.cpp  Button.h  TextUtils.cpp  TextUtils.h
Face-Controlled Arkanoid/game-objects/: Ball.cpp  Ball.h  Block.cpp  Block.h  Paddle.cpp  Paddle.h
Face-Controlled Arkanoid/game-states/: GameResultState.cpp  GameResultState.h  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  RunningState.cpp  RunningState.h
